--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<li></li>
 	    </ul>
 	</div>
-	<h1 contenteditable data-heading="Piece of Cake">С Днём Рождения!</h1> 
+	<h1 contenteditable data-heading="Piece of Cake">Игорь сьешь говна</h1> 
    	 <script>
         var h1 = document.querySelector("h1");
         h1.addEventListener("input", function() {
